--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
-  "name": "orora-backend-express",
-  "version": "1.0.0",
-  "main": "./src/index.ts",
-  "scripts": {
-    "start": "npx tsc",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "lint": "eslint 'src/**/*.{js,ts,tsx}'",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
-    "lint:fix": "eslint --fix 'src/**/*.{js,ts,tsx}'"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@types/jsonwebtoken": "^9.0.6",
-    "axios": "^1.7.2",
-    "bcrypt": "^5.1.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "knex": "^3.1.0",
-    "nodemailer": "^6.9.14",
-    "pg": "^8.12.0"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/knex": "^0.16.1",
-    "@types/node": "^20.14.11",
-    "@types/nodemailer": "^6.4.15",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "nodemon": "^3.1.4",
-    "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
-  }
+    "name": "orora-backend-express",
+    "version": "1.0.0",
+    "main": "./src/index.ts",
+    "scripts": {
+        "start": "npm run build && node dist/src/index",
+        "dev": "nodemon --exec ts-node src/index.ts",
+        "build": "rimraf ./dist && npx tsc",
+        "migrate": "npx knex migrate:latest",
+        "lint": "eslint 'src/**/*.{js,ts,tsx}'",
+        "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
+        "lint:fix": "eslint --fix 'src/**/*.{js,ts,tsx}'"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "@types/jsonwebtoken": "^9.0.6",
+        "axios": "^1.7.2",
+        "bcrypt": "^5.1.1",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
+        "knex": "^3.1.0",
+        "nodemailer": "^6.9.14",
+        "pg": "^8.12.0",
+        "rimraf": "^6.0.1"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/knex": "^0.16.1",
+        "@types/node": "^20.14.11",
+        "@types/nodemailer": "^6.4.15",
+        "@typescript-eslint/eslint-plugin": "^7.16.1",
+        "@typescript-eslint/parser": "^7.16.1",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-prettier": "^5.2.1",
+        "nodemon": "^3.1.4",
+        "prettier": "^3.3.3",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.3"
+    }
 }
